@startuml

title __NAVIGATION's Class Diagram__\n

  namespace com.woonders.lacemsjsf.navigation {
    class com.woonders.lacemsjsf.navigation.ChooseDomainView {
        - tenantDomain : String
        + getDomainManager()
        + getPropertiesUtil()
        + getTenantDomain()
        + getTenantManager()
        + goToAgency()
        + sendToLoginOrDomain()
        + setDomainManager()
        + setPropertiesUtil()
        + setTenantDomain()
        + setTenantManager()
    }
  }
  

  namespace com.woonders.lacemsjsf.navigation {
    class com.woonders.lacemsjsf.navigation.DomainManager {
        {static} + JSF_NAME : String
        {static} + NAME : String
        + isFromMainDomain()
    }
  }
  

  namespace com.woonders.lacemsjsf.navigation {
    class com.woonders.lacemsjsf.navigation.NavigationBackingBean {
        + getAccessLogOutcome()
        + getAnalyticsClientiOutcome()
        + getAnalyticsNominativiOutcome()
        + getAntiriciclaggioAdminOutcome()
        + getAntiriciclaggioOutcome()
        + getAziendaOutcome()
        + getBackupOutcome()
        + getCambioPasswordAntiriciclaggioOutcome()
        + getCambioPasswordOutcome()
        + getCreateNewSimulatorTableOutcome()
        + getDashboardNominativoOutcome()
        + getDashboardOutcome()
        + getDatiPersonaliOutcome()
        + getDeleteClientePraticaOutcome()
        + getFatturazioneOutcome()
        + getGestionePermessiOutcome()
        + getInfoAccountOutcome()
        + getInfoCampagneMarketingOutcome()
        + getInviteFriendsOutcome()
        + getManageRolesOutcome()
        + getManageUsersOutcome()
        + getNominativiOmessiOutcome()
        + getNoticeBoardDatatableOutcome()
        + getNoticeBoardOutcome()
        + getNuovaAmministrazioneCheckRagioneSocialeOutcome()
        + getNuovaCampagnaMarketingOutcome()
        + getNuovaPraticaCheckCfOutcome()
        + getNuovoNominativoOutcome()
        + getPreferenzeOutcome()
        + getRicaricaSmsOutcome()
        + getRoleTag()
        + getRunSimulatorOutcome()
        + getSearchAmministrazioneOutcome()
        + getSearchClienteNominativoOutcome()
        + getSettingsCampagneMarketingOutcome()
        + getSimulatorTableListOutcome()
        + getStatoNominativiOutcome()
        + getStatoPraticheCessioniDelegheOutcome()
        + getStatoPratichePrestitiOutcome()
        + getUsername()
        + isAccessLogSectionRendered()
        + isAjaxRequest()
        + isAntiriciclaggioSectionRendered()
        + isBackupSectionRendered()
        + isClienteOrNominativoReadRendered()
        + isClienteSectionRendered()
        + isDeleteClienteSectionRendered()
        + isNominativoSectionRendered()
        + isNuovaAmministrazioneRendered()
        + isNuovaPraticaRendered()
        + isNuovoNominativoRendered()
        + isRicaricaSectionRendered()
        + isSimulatorCreateTableSectionRendered()
        + isSimulatorSectionRendered()
        + setHttpSessionUtil()
        + setSettingService()
    }
  }
  

  com.woonders.lacemsjsf.navigation.ChooseDomainView .up.|> java.io.Serializable
  com.woonders.lacemsjsf.navigation.ChooseDomainView o-- com.woonders.lacemsjsf.navigation.DomainManager : domainManager
  com.woonders.lacemsjsf.navigation.ChooseDomainView o-- com.woonders.lacemsjsf.config.PropertiesUtil : propertiesUtil
  com.woonders.lacemsjsf.navigation.ChooseDomainView o-- com.woonders.lacemscommon.config.TenantManager : tenantManager
  com.woonders.lacemsjsf.navigation.NavigationBackingBean .up.|> java.io.Serializable
  com.woonders.lacemsjsf.navigation.NavigationBackingBean o-- com.woonders.lacemsjsf.util.HttpSessionUtil : httpSessionUtil
  com.woonders.lacemsjsf.navigation.NavigationBackingBean o-- com.woonders.lacemscommon.service.SettingService : settingService


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
